[package]
name = "advocat"
description = "A complimentary CLI tool to jutge.org"
version = "3.0.0-dev"
license="GPL-3.0"
authors = ["Roger Díaz Viñolas <rdvdev2@gmail.com>"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
directories = "4.0"
exitcode = "1.1"